Adding a bunch of JavaDoc comments, which cover most of the force icon functionality